--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "proxy": "http://192.168.1.96:8080/",
   "dependencies": {
+    "@babel/core": "^7.6.2",
+    "@storybook/react": "^5.2.1",
+    "babel-loader": "^8.0.6",
     "node-sass": "^4.12.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
@@ -16,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook"
   },
   "eslintConfig": {
     "extends": "react-app"
